Base edicion imagen
Elementos visuales para la edicion de imagenes, por medio del modal o perspectiva de un repositorio. Implementado modal editar imagen y la base de su funcionamiento logico (options del select, tags y demas aspectos). Implementado el spinner de carga en distintas vistas mientras se procesan las solicitudes en el back

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -107,6 +107,14 @@ select{
     margin-bottom: 1em;
 }
 
+/* ESTILO DEL SPINNER DE CARGA */
+.spinner-border{
+    color: #9575cd;
+    margin: auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
 
 /* ESTILO DE LOS MODALS */
 .modal-content{
