--- a/templates/perfil_usuario.html
+++ b/templates/perfil_usuario.html
@@ -14,5 +14,8 @@
     </div>
     <h3 class="text-center">Mis Repositorios</h3>
     <hr>
+    <div id="carga-repositorios-perfil" class="d-flex justify-content-center">
+        <div class="spinner-border" role="status"></div>
+    </div>
     <div id="contenedor-tarjetas-repositorios" class="row row-cols-1 row-cols-md-3 g-4"></div>
 {% endblock %}
