Edicion y eliminacion de imagenes
Programados los metodos PUT y DELETE del endpoint /imagen para poder editar y eliminar imagenes desde la vista del repositorio de un usuario (al que pertenece la imagen). Mejorado sultilmente el css en algunos incisos

--- a/static/styles/dashboard.css
+++ b/static/styles/dashboard.css
@@ -25,8 +25,13 @@ body{
 }
 
 /* PREVISUALIZACION DE LA IMAGEN DEL REPOSITORIO EN EL MODAL DE CREACION Y EDICION*/
-#previsualizacion-imagen-crear-repositorio, #previsualizacion-imagen-editar-repositorio, #previsualizacion-imagen-crear-imagen{
+#previsualizacion-imagen-crear-repositorio, #previsualizacion-imagen-editar-repositorio{
     border-radius: 15px;
+}
+
+#previsualizacion-imagen-crear-imagen, #previsualizacion-imagen-editar-imagen{
+    border-radius: 15px;
+    width: 40%;
 }
 
 .card{
