--- a/templates/elements/modal.html
+++ b/templates/elements/modal.html
@@ -141,7 +141,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <h3>Nueva imagen</h3>
-                    <img id="previsualizacion-imagen-crear-imagen" src="../static/assets/icons/imagen.svg" onerror="this.src='../static/assets/icons/imagen.svg'" style="width: 90px;" class="m-2">
+                    <img id="previsualizacion-imagen-crear-imagen" src="../static/assets/icons/imagen.svg" onerror="this.src='../static/assets/icons/imagen.svg'" class="m-2">
                     <form id="form-crear-imagen">
                         <div>
                             <label for="imagen">Imagen</label>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <h3>Editar imagen</h3>
-                    <img id="previsualizacion-imagen-editar-imagen" src="../static/assets/icons/imagen.svg" onerror="this.src='../static/assets/icons/imagen.svg'" style="width: 90px;" class="m-2">
+                    <img id="previsualizacion-imagen-editar-imagen" src="../static/assets/icons/imagen.svg" onerror="this.src='../static/assets/icons/imagen.svg'" class="m-2">
                     <form id="form-editar-imagen">
                         <div>
                             <label for="imagen">Imagen</label>
