--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,7 +28,7 @@
             </a>
         </div>
         <div style="position: absolute; right: 1em;">
-            <a href="perfil-usuario"><img src="../static/assets/icons/usuario.svg" onerror="this.src='../static/assets/icons/usuario.svg'" id="imagen-icono-perfil" class="rounded-circle icono-perfil"></a>
+            <a href="perfil-usuario"><img src="../static/assets/icons/usuario.svg" onerror="this.src='../static/assets/icons/usuario.svg'" id="imagen-icono-perfil" class="icono-perfil"></a>
         </div>
     </nav>
     <!-- CONTENEDOR FLUID PRINCIPAL DE LA APP -->
