--- a/templates/elements/modal.html
+++ b/templates/elements/modal.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <h3>Editar perfil</h3>
-                    <img id="previsualizacion-imagen-editar-perfil" src="../static/assets/icons/usuario.svg" onerror="this.src='../static/assets/icons/usuario.svg'" style="width: 90px;" class="rounded-circle m-2">
+                    <img id="previsualizacion-imagen-editar-perfil" src="../static/assets/icons/usuario.svg" onerror="this.src='../static/assets/icons/usuario.svg'" style="width: 100px; height: 100px;" class="icono-perfil m-2">
                     <form id="form-editar-perfil">
                         <div>
                             <label for="usuario">Nombre de usuario</label>
@@ -186,11 +186,11 @@
                     <h3>Editar imagen</h3>
                     <img id="previsualizacion-imagen-editar-imagen" src="../static/assets/icons/imagen.svg" onerror="this.src='../static/assets/icons/imagen.svg'" class="m-2">
                     <form id="form-editar-imagen">
-                        <div>
+                        <!-- <div>
                             <label for="imagen">Imagen</label>
                             <br>
                             <input type="file" accept="image/*" name="imagen" id="input-imagen-editar-imagen" class="input-formulario"/>
-                        </div>
+                        </div> -->
                         <div>
                             <label for="descripcion">Descripción (opcional)</label>
                             <br>
