--- a/templates/perfil_usuario.html
+++ b/templates/perfil_usuario.html
@@ -7,7 +7,7 @@
 
 {% block contenido %} 
     <div id="contenedor-datos-usuario" class="text-center p-2 mb-3">
-        <img id="imagen-perfil-usuario" src="../static/assets/icons/usuario.svg" onerror="this.src='../static/assets/icons/usuario.svg'" class="rounded-circle">
+        <img id="imagen-perfil-usuario" src="../static/assets/icons/usuario.svg" onerror="this.src='../static/assets/icons/usuario.svg'"  style="width: 150px; height: 150px;" class="icono-perfil">
         <h3 id="nombre-usuario"></h3>
         <h5 id="correo-usuario"></h5>
         <h5 id="fecha-registro"></h5>
