--- a/templates/registro.html
+++ b/templates/registro.html
@@ -14,7 +14,7 @@
     <div class="card mx-auto mt-5">
         <div class="text-center mt-4 mb-4">
             <h2>Crear nuevo usuario</h2>
-            <img id="previsualizacion-imagen" src="" onerror="this.src='../static/assets/icons/usuario.svg'" style="width: 90px;" class="rounded-circle">
+            <img id="previsualizacion-imagen" src="" onerror="this.src='../static/assets/icons/usuario.svg'" style="width: 90px; height: 90px;" class="icono-perfil">
             <form autocomplete="off" id="form-registro" class="mt-4">
                 <div>
                     <label for="usuario">Nombre de usuario</label>
