--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -9,7 +9,7 @@
 /* BODY CON ANIMACION DE FONDO GRADIENTE */
 body{
     font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    /* height: 110vh; */
+    height: 90vh;
     background: linear-gradient(120deg, #d1c4e9, #673ab7, #311b92, #b388ff, #7c4dff);
     background-size: 1000% 1000%;
 
@@ -114,7 +114,6 @@ select{
     margin-top: 1em;
     margin-bottom: 1em;
 }
-
 
 /* ESTILO DE LOS MODALS */
 .modal-content{
