--- a/templates/perfil_usuario.html
+++ b/templates/perfil_usuario.html
@@ -12,7 +12,7 @@
         <h5 id="correo-usuario"></h5>
         <h5 id="fecha-registro"></h5>
     </div>
-    <h3 class="text-center">Mis Repositorios</h3>
+    <h3 id="informacion-repositorios-perfil" class="text-center">Repositorios</h3>
     <hr>
     <div id="carga-repositorios-perfil" class="d-flex justify-content-center">
         <div class="spinner-border" role="status"></div>
