--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,7 +20,7 @@
 
 {% block body %} 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-light p-3">
+    <nav class="navbar navbar-light">
         <div>
             <a href="/dashboard" class="text-decoration-none text-dark">
                 <img src="../static/assets/icons/plasma.svg" alt="p" style="width: 2em;">
