--- a/templates/elements/navbar.html
+++ b/templates/elements/navbar.html
@@ -1,5 +1,5 @@
 {% macro navbar(texto1, link1, texto2, link2) -%} 
-    <nav class="navbar navbar-light p-3">
+    <nav class="navbar navbar-light">
         <div>
             <a href="/" class="text-decoration-none text-dark">
                 <img src="../static/assets/icons/plasma.svg" alt="p" style="width: 2em;">
