--- a/templates/elements/modal.html
+++ b/templates/elements/modal.html
@@ -92,6 +92,9 @@
                     <h4 class="mb-4">Imagenes</h4>
                     <div id="contenedor-imagenes-visualizar-repositorio" class="row row-cols-1 row-cols-md-3 g-4"></div>
                 </div>
+                <div class="modal-footer">
+                    <button id="boton-nueva-imagen" class="boton-acento mx-auto mb-3" style="display: none;" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#modal-crear-imagen">Nueva imágen</button>
+                </div>
             </div>
         </div>
     </div>
