--- a/templates/elements/navbar.html
+++ b/templates/elements/navbar.html
@@ -3,7 +3,7 @@
         <div>
             <a href="/" class="text-decoration-none text-dark">
                 <img src="../static/assets/icons/plasma.svg" alt="p" style="width: 2em;">
-                <h1 class="d-inline align-middle">Plasma</h1>
+                <h1 class="d-inline align-middle plasma-nav">Plasma</h1>
             </a>
         </div>
         <div style="position: absolute; right: 1em;">
