--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -11,12 +11,12 @@ body{
     font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     height: 90vh;
     background: linear-gradient(120deg, #d1c4e9, #673ab7, #311b92, #b388ff, #7c4dff);
-    background-size: 1000% 1000%;
+    background-size: 500% 500%;
 
-    -webkit-animation: AnimationName 50s ease infinite;
-    animation: AnimationName 50s ease infinite;
+    /* -webkit-animation: AnimationName 50s ease infinite;
+    animation: AnimationName 50s ease infinite; */
 }
-@-webkit-keyframes AnimationName {
+/* @-webkit-keyframes AnimationName {
     0%{background-position:0% 17%}
     50%{background-position:100% 84%}
     100%{background-position:0% 17%}
@@ -25,7 +25,7 @@ body{
     0%{background-position:0% 17%}
     50%{background-position:100% 84%}
     100%{background-position:0% 17%}
-}
+} */
 
 /* EVITAR QUE UN USUARIO PUEDA ARRASTRAR LA IMAGEN */
 img{
@@ -133,6 +133,7 @@ select{
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 15px;
+    border: 0px;
 }
 
 .alert button:focus, .alert button:hover{
@@ -159,6 +160,9 @@ select{
     }
 }
 @media (max-width: 500px) {  
+    .plasma-nav{
+        visibility: hidden;
+    }
     .card{
         width: 75%;
     }
