--- a/templates/elements/modal.html
+++ b/templates/elements/modal.html
@@ -183,17 +183,12 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button class="boton-volver" data-bs-toggle="modal" data-bs-target="#modal-visualizar-repositorio" data-bs-dismiss="modal">Volver</button>
+                    <button id="boton-cerrar-editar-imagen" class="boton-volver" data-bs-toggle="modal" data-bs-target="#modal-visualizar-repositorio" data-bs-dismiss="modal">Volver</button>
                 </div>
                 <div class="modal-body text-center">
                     <h3>Editar imagen</h3>
                     <img id="previsualizacion-imagen-editar-imagen" src="../static/assets/icons/imagen.svg" onerror="this.src='../static/assets/icons/imagen.svg'" class="m-2">
                     <form id="form-editar-imagen">
-                        <!-- <div>
-                            <label for="imagen">Imagen</label>
-                            <br>
-                            <input type="file" accept="image/*" name="imagen" id="input-imagen-editar-imagen" class="input-formulario"/>
-                        </div> -->
                         <div>
                             <label for="descripcion">Descripción (opcional)</label>
                             <br>
